--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -10199,6 +10199,8 @@ A few other miscellaneous table options are
   SNTABLE_LIST = 'SNANA FITRES SPECTRA'  # legacy key: same as MODELSPEC
   SNTABLE_LIST = 'SNANA(PS:10) FITRES'   # pre-scale SNANA table by 10
   SNTABLE_LIST = 'FITRES NOZPHOT'        # suppress ZPHOT variables
+  SNTABLE_LIST = 'SNANA(text:host)'      # include HOSTGAL info in text tables
+  SNTABLE_LIST = 'SNANA(text:key,text:host)' # same, with format spec
 \end{verbatim}
 %
 \begin{itemize}
