--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -6798,12 +6798,23 @@ more often in the undefined region.
 \newcommand{\Fdata}{F_{\rm data}^i}
 \newcommand{\Fmodel}{F_{\rm model}^i}
 
-
-To estimate initial parameters near the global-minimum $\chi^2$, 
-a multi-dimensional grid-search is made over redshift (0.025 bin-width),
-color (0.2 bin-width) and 3 bins in the shape
-parameter ($x_1$, dm15, stretch ...). The minimization over
-the distance parameter is done analytically as follows.
+For SN-only photo-$z$ fits, \minuit\ is likely to find a
+local minimum, rather than the global minimum. It is therefore
+important to provide initial parameter estimates before the
+\minuit\ stage. 
+After using the recommended {\tt OPT\_SETPKMJD=21} (Fmax-clump+BazinFit)
+to estimate {\tt PEAKMJD},
+there are two user-options for estimating initial parameters:
+\begin{verbatim}
+   &FITINP
+     ISCALE_COURSEBIN_PHOTOZ = 1   # multi-dim grid search (default)
+        ! or
+     NEVAL_MCMC_PHOTOZ       = 300 # MCMC burn-in with 300 evaluations
+\end{verbatim} 
+%
+The default opton performs a multi-dimensional grid-search over 
+redshift (0.04 bin-width), color (4 bins) and stretch/shape (3 bins).
+The distance parameter is estimated analytically as follows.
 For each grid point (photoZ, color, shape) the model fluxes
 are first evaluated using the distance
 (SALT2-$\bar{x_0}$ or distance modulus $\bar\mu$) 
@@ -6816,15 +6827,23 @@ is determined as
     = \sum_i( \Fdata\Fmodel/\sigma_i^2) / \sum_i(\Fmodel/\sigma_i)^2
 \end{equation}
 where $\sigma_i$ is the quadrature sum of data and model errors
-and '$i$' is the epoch index.\footnote{See {\tt EP\_FFSUM\_XXX} 
+and '$i$' is the epoch index.\footnote{See {\tt R4SN\_FFSUM\_XXX} 
    variables in {\tt snlc\_fit.car}.}
 The resulting $x_0$ or $\mu$ value is used to re-evaluate
-the $\chi^2$ at this grid-point.
-This approximation assumes that the model-error does
-not depend on $\dSCALE$.
-Also, prior to snana version {\tt v9\_93} the grid-search
-was over photoZ and color only.
+the $\chi^2$ at this grid-point. 
+After finding these four parameter estimates, 
+{\tt PEAKMJD} is searched in 0.5~day bins ($-2$ to $+2$ days).
 
+
+The second option (MCMC) processes all 5 parameters simultaneously.
+Initial {\tt STEP} sizes are 1/3 of the range, and every 20 evaluations
+the {\tt STEP} size is multiplied by 0.90. For each evaluation, the
+parameters are shifted by {\tt STEP}$\times(R_{01}-0.5)$,
+where $R_{01}$ is a random number betweeo 0 and 1.
+For each trial $\Zphot$, a random distance shift ({\tt dmu}) is added 
+to the cosmology-constrained distance ($-4$ to $+4$~mag).
+To ensure reproducibility, the same random seed is used to 
+initialize the random sequence for each event.
 
 Cheater option: {\tt OPT\_PHOTOZ = 16} sets initial
 photoZ to spectroscopic redshift and skips the redshift grid-search. 
