few array bound updates

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -426,6 +426,8 @@ are given by
 %
 where $m_{1,2}$ are the two mag-reference values,
 and ${\rm SNR}_{1,2}$ are the corresponding SNR.
+Beware that there is no solution if
+$m_2-m_1 < 2.5\log_{10}({\rm SNR}_1/{\rm SNR}_2)$.
 %
 To account for exposure-time ($\Texpose$) dependence, 
 $\SNRlam$ can be defined for multiple $\Texpose$ values.
