--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -7540,11 +7540,10 @@ a list of CIDs:
 %
 \begin{Verbatim}[frame=single]
    CUTWIN_CID    =   700, 2000       ! CID integer-range to process
-
       or
    SNCID_LIST    =   5944,   10550   ! integer list of SN to process
+      or
    SNCCID_LIST   =  '5944', '10550'  ! same as above, using strings
-   CUTWIN_CID    =   0,0             ! turn off range to process list
       or
    SNCID_LIST_FILE = 'myCIDs.list'   ! file with list of CIDs to process;
                                      ! separated by space or <CR>
@@ -7577,10 +7576,9 @@ However, for a survey using integer CIDs that start at 1000,
 {\tt CUTWIN\_CID = 1,10} would discard all SNe.
 
 
-Note that the logical-OR is used for 
-{\tt CUTWIN\_CID} and {\tt SNCID\_LIST}. Thus when
-using the LIST option, make sure to set 
-{\tt CUTWIN\_CID=0,0} to turn off the range-option.
+Using any of the ``{\tt \_LIST}'' options (e.g., {\tt SNCID\_LIST}),
+the analysis codes internally set {\tt CUTWIN\_CID=0,0}
+so that only the list CIDs are processed.
 
 Finally, {\tt MXEVT\_PROCESS} stops processing after this many
 events, regardless of of how the other ``{\tt CID}'' inputs are set.
@@ -7591,11 +7589,11 @@ events, regardless of of how the other ``{\tt CID}'' inputs are set.
 To select a few CID values on the command-line, 
 use a comma-separated list:
 \begin{verbatim}
-   snana.exe <myInputFile> CUTWIN_CID 0 0 SNCID_LIST 5,19,184
+   snana.exe <myInputFile>  SNCID_LIST 5,19,184
       or
-   snana.exe <myInputFile> CUTWIN_CID 0 0 SNCCID_LIST 5,19,184
+   snana.exe <myInputFile>  SNCCID_LIST 5,19,184
       or
-   snana.exe <myInputFile> CUTWIN_CID 0 0 SNCCID_LIST 2004cx,2002cx,2005he
+   snana.exe <myInputFile>  SNCCID_LIST 2004cx,2002cx,2005he
      or
    snana.exe <myInputFile> MXEVT_PROCESS 5
 \end{verbatim} 
